<resources>
    <string name="app_name">CloudCast</string>
    <string name="search_hint">আপনার শহরের নাম দিয়ে খুঁজুন</string>
    <string name="humidity">আদ্রতা</string>
    <string name="wind_speed">বাতাসের গতি</string>
    <string name="rain_st">বৃষ্টি</string>
    <string name="temperature">তাপমাত্রা</string>
    <string name="condition">পরিস্থিতি</string>
    <string name="clear">আকাশ পরিষ্কার</string>
    <string name="rain">বৃষ্টি হচ্ছে</string>
    <string name="haze">কুয়াশা</string>
    <string name="thunderstorm">ব্জ্রপাতের সম্ভাবনা রয়েছে</string>
    <string name="snow">তুষার</string>
    <string name="cloudy">আকাশ মেঘলা</string>
    <string name="next_days">পরবরতী ৫ দিনের</string>
    <string name="min_temp">সর্বনিম্ন</string>
    <string name="max_temp">সর্বোচ্চ</string>

    <string name="saturday">শনিবার</string>
    <string name="sunday">রবিবার</string>
    <string name="monday">সোমবার</string>
    <string name="tuesday">মঙ্গলবার</string>
    <string name="wednesday">বুধবার</string>
    <string name="thursday">বৃহস্পতিবার</string>
    <string name="friday">শুক্রবার</string>

</resources>