<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_temp_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/search_area_bg"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/city"
                android:inputType="text"
                android:hint="@string/search_hint"
                android:background="@android:color/transparent"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:id="@+id/search_by_city"
                android:src="@drawable/search_icon"/>

        </LinearLayout>

        <TextView
            android:id="@+id/weather_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/clear"
            android:textSize="28sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/weather_status_img"
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/sunnylarge"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="25 °C"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/min_tmp"
                android:text="@string/min_temp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/max_tmp"
                android:text="@string/max_temp"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rain_wind_humidity_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rain_wind_humidity"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal"
        android:layout_below="@+id/main_temp_section">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rain_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/rain" />

            <TextView
                android:id="@+id/rain_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0%"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/rain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rain_st"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wind_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wind"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0mk/h"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/wind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/humidity_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/humidity"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_seven_days"
        android:text="@string/next_days"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:drawableRight="@drawable/right_arrow"
        android:drawablePadding="2dp"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>